minor formatting adjustments

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <main class="container">
-        <h1>Github Projects</h1>
-        <small>Showcasing various web development and productivty related Github projects</small>
+        <h1>Corbet's Github Projects</h1>
+        <small>Showcasing various web development and productivty related Github projects from <a href="https://corbet.app">Corbet's portfolio.</a></small>
         <section class="intro">
             <div class="user-info"></div>
         </section>
